Bug 1302645 - Only relazify functions on shrinking GCs to avoid reparsing too much. r=terrence